--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,9 +44,14 @@ i {
   align-content: space-around;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: 10px;
   margin: 0 auto;
   padding: 20px;
+}
+
+.upper {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .cont-ball {
