--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,6 +10,15 @@ body {
   margin: 0 auto;
 }
 
+h1,
+h2 {
+  margin: 0 auto;
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 b {
   padding-right: 50px;
   font-size: 1.2rem;
@@ -31,9 +40,6 @@ i {
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-transform: uppercase;
   padding: 20px;
 }
 
@@ -48,16 +54,13 @@ i {
   padding: 20px;
 }
 
-.upper {
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-transform: uppercase;
-}
+
 
 .cont-ball {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-bottom: 5px;
 }
 
 .ball {
