--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,13 +13,10 @@ body {
 }
 
 
-
 h1,
 h2 {
-  margin: 0 auto;
-  padding: 10px;
+  margin: 5px;
   text-transform: uppercase;
-
 }
 
 b {
@@ -38,6 +35,7 @@ i {
 
 
 .head {
+  text-transform: uppercase;
   text-align: center;
   width: 1480px;
   background-color: #0c0c0ccc;
@@ -57,6 +55,7 @@ i {
   flex-direction: column;
   margin: 0 auto;
   padding: 20px;
+  color: #f0ffff;
 }
 
 
