--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,6 +15,7 @@ body {
 
 h1,
 h2 {
+  padding-top: 10px;
   margin: 5px;
   text-transform: uppercase;
 }
@@ -59,14 +60,14 @@ i {
 }
 
 
-.cont-ball {
+.wrap-line {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding-bottom: 5px;
 }
 
-.ball {
+.line {
   height: 5px;
   min-width: 25%;
   background-color: #ff0000;
